--- a/eg.ipynb
+++ b/eg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 106,
    "id": "ccb1b1bb",
    "metadata": {},
    "outputs": [],
@@ -34,30 +34,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "59149d3c",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_user_past_events(user_id):\n",
+    "    \"\"\"Returns all events the user has registered for, regardless of status\"\"\"\n",
     "    past_event_ids = [r['eventId'] for r in registrations if r['userId'] == user_id]\n",
     "    return [e for e in events if e['_id'] in past_event_ids]\n",
     "\n",
-    "def filter_candidate_events(user_id):\n",
-    "    current_time = datetime.now(timezone.utc)  # Make timezone-aware\n",
+    "def filter_candidate_events(user_id, include_attended_events=True):\n",
+    "\n",
+    "    current_time = datetime.now(timezone.utc)\n",
     "    candidates = []\n",
+    "    \n",
+    "\n",
+    "    registered_event_ids = {r['eventId'] for r in registrations if r['userId'] == user_id}\n",
+    "    \n",
     "    for event in events:\n",
+    "        # Parse event times (timezone-aware)\n",
     "        end_time = datetime.fromisoformat(event['endTime'].replace('+00:00', '+00:00')).replace(tzinfo=timezone.utc)\n",
-    "        if event['status'] == 'live' and end_time > current_time:\n",
-    "            is_registered = any(r['eventId'] == event['_id'] and r['userId'] == user_id for r in registrations)\n",
-    "            if not is_registered:\n",
-    "                candidates.append(event)\n",
+    "        is_past = end_time <= current_time\n",
+    "        is_registered = event['_id'] in registered_event_ids\n",
+    "        \n",
+    "        \n",
+    "        if is_registered:\n",
+    "    \n",
+    "            include_event = include_attended_events and is_past\n",
+    "        else:\n",
+    "            include_event = (event['status'] == 'live') and (not is_past or include_attended_events)\n",
+    "        if include_event:\n",
+    "            event_copy = event.copy()\n",
+    "            event_copy.update({\n",
+    "                'is_past': is_past,\n",
+    "                'is_registered': is_registered,\n",
+    "                'user_attended': is_registered and is_past\n",
+    "            })\n",
+    "            candidates.append(event_copy)\n",
+    "    \n",
     "    return candidates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "419f1ce9",
    "metadata": {},
    "outputs": [],
@@ -87,12 +108,23 @@
     "    ]\n",
     "    days_features = np.array(days_until_start).reshape(-1, 1)  # Shape: (n_events, 1)\n",
     "    \n",
-    "    # Combine all features\n",
+    "    \n",
     "    features = np.hstack([tfidf_features, categorical_features, days_features])\n",
     "    return features\n",
     "\n",
-    "def cluster_events(events, n_clusters=5):\n",
-    "    features = extract_features_for_clustering(events)\n",
+    "def cluster(events, n_clusters=5):\n",
+    "    descriptions = [e[\"description\"] for e in events]\n",
+    "    tfidf = TfidfVectorizer(max_features=50, stop_words=\"english\")\n",
+    "    tfidf_features = tfidf.fit_transform(descriptions).toarray()\n",
+    "    \n",
+    "    event_types = [e[\"eventType\"] for e in events]\n",
+    "    organizers = [e[\"organizerId\"] for e in events]\n",
+    "    encoder = OneHotEncoder(handle_unknown='ignore')\n",
+    "    categorical_features = encoder.fit_transform(np.column_stack([event_types, organizers])).toarray()\n",
+    "    \n",
+    "\n",
+    "    features = np.hstack([tfidf_features, categorical_features])\n",
+    "    \n",
     "    kmeans = KMeans(n_clusters=n_clusters, random_state=42)\n",
     "    clusters = kmeans.fit_predict(features)\n",
     "    for i, event in enumerate(events):\n",
@@ -102,27 +134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "a9ffa152",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recommend_events(user_id, top_n=3):\n",
-    "    # Cluster events (precompute once)\n",
-    "    clustered_events = cluster_events(events)\n",
-    "    \n",
-    "    # Get user's past events and their clusters\n",
+    "def recommend_events(user_id,events, top_n=3):\n",
+    "    clustered_events = cluster(events)\n",
     "    past_events = get_user_past_events(user_id)\n",
     "    user_clusters = list(set([e[\"cluster\"] for e in past_events])) if past_events else []\n",
     "    \n",
-    "    # Filter live/upcoming candidates\n",
     "    candidate_events = filter_candidate_events(user_id)\n",
     "    \n",
-    "    # Score and recommend live/upcoming events first\n",
+    "\n",
     "    if candidate_events:\n",
-    "        scored_events = []\n",
-    "        \n",
-    "        # Content similarity\n",
     "        event_descriptions = [e[\"description\"] for e in candidate_events]\n",
     "        past_descriptions = [e[\"description\"] for e in past_events] if past_events else [\"\"]\n",
     "        \n",
@@ -133,31 +158,29 @@
     "        \n",
     "        similarity_scores = cosine_similarity(past_vectors, candidate_vectors).mean(axis=0) if past_events else [0.5]*len(candidate_events)\n",
     "        \n",
+    "        scored_events = []\n",
     "        for idx, event in enumerate(candidate_events):\n",
-    "            # Cluster affinity\n",
     "            cluster_score = 1 if user_clusters and event[\"cluster\"] in user_clusters else 0.5\n",
+    "            type_score = 1 if past_events and event[\"eventType\"] in [e[\"eventType\"] for e in past_events] else 0.5\n",
     "            \n",
-    "            # Time relevance\n",
     "            start_time = datetime.fromisoformat(event[\"startTime\"].replace(\"+00:00\", \"+00:00\")).replace(tzinfo=timezone.utc)\n",
     "            days_until_start = (start_time - datetime.now(timezone.utc)).days\n",
     "            time_score = 1 / (1 + abs(days_until_start))\n",
     "            \n",
-    "            # Combined score\n",
-    "            score = (\n",
-    "                0.4 * similarity_scores[idx] +  # Text similarity\n",
-    "                0.3 * cluster_score +          # Cluster affinity\n",
-    "                0.2 * (1 if past_events and event[\"eventType\"] in [e[\"eventType\"] for e in past_events] else 0.5) +\n",
-    "                0.1 * time_score               # Time relevance\n",
-    "            )\n",
+    "            score = (0.4 * similarity_scores[idx] + \n",
+    "                    0.3 * cluster_score + \n",
+    "                    0.2 * type_score + \n",
+    "                    0.1 * time_score)\n",
+    "            \n",
     "            scored_events.append((event, score))\n",
-    "        \n",
+    "\n",
+    "        print(scored_events[0][1])\n",
+    "\n",
     "        scored_events.sort(key=lambda x: x[1], reverse=True)\n",
-    "        recommended = [event for event, _ in scored_events[:top_n]]\n",
-    "        \n",
-    "        if recommended:\n",
-    "            return recommended\n",
+    "        recommendations = [event for event, _ in scored_events[:top_n]]\n",
+    "        if recommendations:\n",
+    "            return recommendations\n",
     "    \n",
-    "    # Fallback 1: Any events from user's preferred clusters (including past)\n",
     "    event_popularity = defaultdict(int)\n",
     "    for reg in registrations:\n",
     "        event_popularity[reg[\"eventId\"]] += 1\n",
@@ -165,29 +188,21 @@
     "    user_registered_ids = {r[\"eventId\"] for r in registrations if r[\"userId\"] == user_id}\n",
     "    \n",
     "    if user_clusters:\n",
-    "        # Get events from user's clusters, sorted by popularity\n",
-    "        cluster_events = [\n",
-    "            e for e in clustered_events\n",
-    "            if e[\"cluster\"] in user_clusters\n",
-    "            and e[\"_id\"] not in user_registered_ids\n",
-    "        ]\n",
+    "        cluster_events = [e for e in clustered_events \n",
+    "                         if e[\"cluster\"] in user_clusters\n",
+    "                         and e[\"_id\"] not in user_registered_ids]\n",
     "        cluster_events.sort(key=lambda x: -event_popularity[x[\"_id\"]])\n",
-    "        \n",
     "        if cluster_events:\n",
     "            return cluster_events[:top_n]\n",
     "    \n",
-    "    # Fallback 2: Globally popular events (any cluster)\n",
-    "    all_events_sorted = sorted(\n",
-    "        [e for e in clustered_events if e[\"_id\"] not in user_registered_ids],\n",
-    "        key=lambda x: -event_popularity[x[\"_id\"]]\n",
-    "    )\n",
-    "    \n",
-    "    return all_events_sorted[:top_n]"
+    "    all_events = [e for e in clustered_events if e[\"_id\"] not in user_registered_ids]\n",
+    "    all_events.sort(key=lambda x: -event_popularity[x[\"_id\"]])\n",
+    "    return all_events[:top_n]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 125,
    "id": "6ea1b64f",
    "metadata": {},
    "outputs": [
@@ -195,16 +210,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.3569191076890392\n",
       "Recommended Events:\n",
       "- Alvarez, Foster and Walker (concert, starts 2025-04-20T00:00:00.000Z)\n",
-      "- Banks LLC (marathon, starts 2025-02-22T00:00:00.000Z)\n",
-      "- Campos-Smith (gala, starts 2025-03-05T00:00:00.000Z)\n"
+      "- Espinoza-Lane (virtual, starts 2025-04-14T00:00:00.000Z)\n",
+      "- Jackson LLC (marathon, starts 2025-01-06T00:00:00.000Z)\n"
      ]
     }
    ],
    "source": [
     "user_id = \"681e535ec99231a537cc9c88\"  # Dr. Beth Koch\n",
-    "recommended_events = recommend_events(user_id, top_n=3)\n",
+    "recommended_events = recommend_events(user_id, events, top_n=3)\n",
     "\n",
     "print(\"Recommended Events:\")\n",
     "for event in recommended_events:\n",
@@ -213,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 111,
    "id": "06c64c74",
    "metadata": {},
    "outputs": [],
@@ -282,7 +298,9 @@
    "id": "c8dbb393",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
